# dispatch

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.rst  appveyor.yml  conanfile.py  conanfile.txt  remote.txt  remotes.txt
.conan/: remotes.txt
common/: constants.h  log.h  windows_shim.h
dispatchctl/: main.c
dispatchctld/: Makefile  main.c  main_test.c  sig_handler.c  sig_handler.h
dispatchd/: Makefile  main.c  main.c~  main_test.c
test/: main_test.c  minunit.h
